# x-agent

./: .gitignore  AGENTS.md  DEEPCACHE_DESIGN.md  Dockerfile  README.md  ROADMAP_DEEP_DIVE.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  socratic_clarification_assessment.md  socratic_integration_v2.md
.github/workflows/: ci.yml  docs.yml  release.yml
archive/: README.md
archive/kimi-state/: config.template.toml  kimi.json.template
archive/xagent-state/: config.json.template  experience_bank.db
docs/: ARCHITECTURE.md  OPERATIONS.md  README.md  getting-started.md  index.md  swarm.md
docs/api/: cli.md  core.md  eval.md
tests/: test_a2a.py  test_cache.py  test_cache_context.py  test_clarification_engine.py  test_clarification_integration.py  test_cli.py  test_code_intel.py  test_code_intel_advanced.py  test_contract_history.py  test_cost_control.py  test_eval.py  test_eval_e2e.py  test_filesystem_edit.py  test_gui_settings.py  test_intent_tracker.py  test_mcp_client.py  test_mcp_manager.py  test_mcp_security.py  test_memory_engine.py  test_persistence.py  test_repair_pipeline.py  test_requirement_contract.py  test_resource_adaptive.py  test_router.py  test_self_improve.py  test_swarm.py  test_swarm_advanced.py  test_swarm_integration.py  test_swarm_unit.py  test_task.py  test_telemetry.py  test_thought_harvester.py  test_tool_registry.py  test_tools_new.py  test_vision.py  test_workflow.py
tests/swarm_poc/: benchmark.py  (+7 more)
vscode-xagent/: .vscodeignore  package-lock.json  package.json
xagent/: __init__.py  __main__.py  config.py  server.py
(+105 files in other folders)
